# RL-Lecture

./: README.md  pyproject.toml
UofA-RL-Theory/: lec1.ipynb  lec1.md
