[tool.poetry]
name = "shumi"
version = "0.1.0"
description = ""
authors = ["write your name"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.1"
seaborn = "^0.12.2"
matplotlib = "^3.6.3"
notebook = "^6.5.2"
tqdm = "^4.64.1"
celluloid = "^0.2.0"
ipywidgets = "^8.0.5"
ipympl = "^0.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
